# song-overlay

./: .gitignore  README.md  index.html  pyproject.toml  script.js  style.css
song_overlay/: app.py  in_memory_cache.py  utils.py
song_overlay/clients/: spotify_client.py
song_overlay/models/: auth.py  player.py
song_overlay/templates/: current-playing.html
